--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.0",
+    "hash-factory": "^1.1.2",
     "modelmix": "^3.7.2",
     "shotx": "^1.3.2"
   }
