--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "jszip": "^3.10.1",
     "lucide-svelte": "^0.525.0",
     "shotx": "^1.3.4"
   }
