--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "jszip": "^3.10.1",
     "lucide-svelte": "^0.525.0",
+    "roster-server": "^1.7.6",
     "shotx": "^1.3.4"
   }
 }
