--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "express": "^5.1.0",
     "jszip": "^3.10.1",
     "lucide-svelte": "^0.525.0",
     "roster-server": "^1.7.6",
