--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "hash-factory": "^1.1.2",
     "modelmix": "^3.7.2",
+    "sharp": "^0.34.3",
     "shotx": "^1.3.4"
   }
 }
