--- a/default.env
+++ b/default.env
@@ -1,10 +1,5 @@
 ANTHROPIC_API_KEY="sk-ant-..."
 OPENAI_API_KEY="sk-proj-..."
-PPLX_API_KEY="pplx-..."
-GROQ_API_KEY="gsk_..."
-TOGETHER_API_KEY="49a96..."
-XAI_API_KEY="xai-..."
-CEREBRAS_API_KEY="csk-..."
-GOOGLE_API_KEY="AIza..."
-LAMBDA_API_KEY="secret_..."
-BRAVE_API_KEY="BSA0..._fm"
+DOMAIN_EMAIL="admin@example.com"
+DOMAIN="example.com"
+DOMAIN_API="api.example.com"
